Update newInstance creation for Java 11